--- a/Style.css
+++ b/Style.css
@@ -29,11 +29,10 @@ a {
 .topnav {
   background-color: #333;
   overflow: hidden;
-  position: fixed
 }
 
 .topnav a {
-  /*float: left;*/
+  float: left;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
