--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
 	font-family: Verdana;
   font-size: 15px;
@@ -26,21 +30,55 @@ a {
   text-decoration: none;
 }
 
-.topnav {
-  background-color: #333;
+div.hidden {
+  display: none;
+}
+
+div.hidden2 {
+  display: none;
+}
+
+div.hidden3 {
+  display: none;
+}
+
+.tab {
+  display: none;
   overflow: hidden;
+  border: 1px solid #ccc;
+  background-color:#484848;
 }
 
-.topnav a {
+.tab button {
+  font-family: Verdana;
+  font-size: 15px;
+  color:#F5F5F5;
+  background-color: inherit;
   float: left;
-  color: #f2f2f2;
-  text-align: center;
+  border: none;
+  outline: none;
+  cursor: pointer;
   padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+  transition: 0.3s;
 }
 
-.topnav a:hover {
+.tab button:hover {
   background-color: #ddd;
-  color: black;
+}
+
+.tab button.active {
+  background-color: #ccc;
+}
+
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+  animation: fadeEffect 1s;
 } 
+
+@keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
