--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,20 @@
-/* Default font settings and background color set */
+/* Default font settings and background color set. Also set fade in animation for 3 seconds to run once and fill forwards from 0 opacity (invisible) to 1 (completely visible) */
 body
 {
     font-family: Arial, Helvetica, sans-serif;
     color: #FFFF;
     background-color: rgb(49, 49, 49);
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
 }
 /*Set headers after the first one to all be the same size*/
 h2, h3, h4, h5, h6
@@ -30,6 +41,7 @@ form
     width: 40px;
     height: 40px; 
 }
+/*Creates container for flex to display images side by side and center*/
 .flex-container
 {
     display: flex;
@@ -39,6 +51,7 @@ form
     margin: 0;
     list-style: none;
 }
+/*CSS for the items contained in the above container*/
 .flex-item
 {
     padding: 5px;
