--- a/Style.css
+++ b/Style.css
@@ -2,12 +2,19 @@
 body
 {
     font-family: Arial, Helvetica, sans-serif;
-    color: #FFFF;
-    background-color: rgb(49, 49, 49);
+    color: black;
+    background-color: white;
     animation: fadeInAnimation ease 3s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
+
+.darkmode
+{
+    color:white;
+    background-color: black; 
+}
+
 @keyframes fadeInAnimation {
     0% {
         opacity: 0;
@@ -50,6 +57,28 @@ form
     padding: 0;
     margin: 0;
     list-style: none;
+}
+
+.button {
+  background: rgb(95, 3, 87);
+  border-radius: 999px;
+  box-shadow: rgb(95, 3, 87) 0 10px 20px -10px;
+  box-sizing: border-box;
+  color: white;
+  cursor: pointer;
+  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  opacity: 1;
+  outline: 0 solid transparent;
+  padding: 8px 18px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: fit-content;
+  word-break: break-word;
+  border: 0;
 }
 /*CSS for the items contained in the above container*/
 .flex-item
